src/kubernetes/petclinic.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app: petclinic
