src/kubernetes/global.aws.ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: ext-jenkins
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: general-ingress
spec:
  rules:
    - host: sonar.esfacil.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000

    - host: jenkins.esfacil.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ext-jenkins
                port:
                  number: 8080

    - host: petclinic.esfacil.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  number: 80
