src/kubernetes/jenkins.ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: ext-jenkins
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ext-jenkins
                port:
                  number: 8080
